Commit all changes to catalog app repository before cloning and launching on aws

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,3 +1,8 @@
+/* Lee's Item Catalog Project
+4/8/2017
+Version 1.0
+Udacity Fullstack Nanodegree */
+
 /* General Styles */
 * {
     -webkit-box-sizing: border-box;
