--- a/templates/newdealership.html
+++ b/templates/newdealership.html
@@ -16,27 +16,27 @@
 		<div class="col-md-6 col-md-offset-1 padding-top">
 				<form action="#" method = "post">
 						<div class="form-group">
-								<label for="name">Name:</label>
+								<label>Name:</label>
 								<input type ="text" class="form-control" maxlength="250" name="name" required>
 
-								<label for="address">Address:</label>
+								<label>Address:</label>
 								<input type ="text" maxlength="250" class="form-control" name="address" required>
 
-								<label for="phone">Phone:</label>
-								<input type ="text" maxlength="15" class="form-control" name="phone"required>
+								<label>Phone:</label>
+								<input type ="text" maxlength="15" class="form-control" name="phone" required>
 						</div>
 
 						<div class="padding-bottom"></div>
 
 						<div class="submit">
-								<button type="submit" class="btn btn-success pull-left" id="submit" type="submit">
+								<button type="submit" class="btn btn-success pull-left" id="submit">
 								<span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Create</button>
 						</div>
 				</form>
 
-				<form method="cancel">
+				<form method="get">
 						<div class="cancel-input col-md-1">
-								<button type="cancel" class="btn btn-danger pull-left" id="cancel">
+								<button type="submit" class="btn btn-danger pull-left" id="cancel">
 								<span class="glyphicon glyphicon-remove" aria-hidden="true"></span> Cancel</button>
 						</div>
 				</form>
